--- a/help.html
+++ b/help.html
@@ -7,10 +7,10 @@
 <html>
     <body>
         <div class="titlebar">
-            <a class="t" href="https://yonzhe.gitee.io/">首页</a>|
-            <a class="t" href="https://yonzhe.gitee.io/about.html">关于</a>|
-            <a class="t" href="https://yonzhe.gitee.io/help.html">帮助</a>|
-            <a class="t" href="https://yonzhe.gitee.io/users.html">投稿</a>|
+            <a class="t" href="https://clxon.github.io/">首页</a>|
+            <a class="t" href="https://clxon.github.io/about.html">关于</a>|
+            <a class="t" href="https://clxon.github.io/help.html">帮助</a>|
+            <a class="t" href="https://clxon.github.io/users.html">投稿</a>|
         </div><hr/>
         <div class="center">
             <h1>帮助页 -- lemon</h1>
