--- a/happy-321.html
+++ b/happy-321.html
@@ -6,14 +6,15 @@
         <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">  
         <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <title>Bootstrap</title>
+		<script>function lemon(){location.assign("https://clxon.github.io/img/lemon.png");};function fish(){location.assign("https://clxon.github.io/img/fish.jpg");};function sword(){location.assign("https://clxon.github.io/img/sword.png")};</script>
+		<title>Bootstrap</title>
     </head>
     <body class="text-center">
         <h1>快 乐 三 选 一</h1>
         <div class="btn-group">
-            <button type="button" class="btn btn-success btn-lg">莱蒙</button>
-            <button type="button" class="btn btn-warning btn-lg">带剑</button>
-            <button type="button" class="btn btn-danger btn-lg">带鱼</button>
+            <button type="button" onclick="lemon()" class="btn btn-success btn-lg">莱蒙</button>
+            <button type="button" onclick="sword()" class="btn btn-warning btn-lg">带剑</button>
+            <button type="button" onclick="fish()" class="btn btn-danger btn-lg">带鱼</button>
         </div>
 	</body>
 </html>
