--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="/static/index.css" type="text/css" />
     <meta charset="utf8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 Not Found</title>
   </head>
   <body class="center">
