--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
             <a class="t" href="https://clxon.github.io/users.html">投稿</a>|
         </div><hr/>
         <div class="center">
-            <h1>我的神奇主页 -- Jiang.Lemon</h1>
+            <h1>我的神奇主页 -- Lemon</h1>
             <p>这是我的主页！我们可以干什么？什么也不干！！！</p>
             <p>这个神奇主页使用来干啥的？lemon的主页！</p>
-            <p>这个主页上面的四兄贵是可以点的！</p>
             <p>这个地方可以帮伟大的同志们上传文章！</p>    
         </div>
     </body>
